// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
  // binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id                String    @id @default(uuid())
  email             String    @unique
  password          String
  firstName         String?
  lastName         String?
  name             String?
  username         String?   @unique
  avatarUrl         String?
  isVerified        Boolean   @default(false)
  verificationToken String?
  resetToken        String?
  resetTokenExpiry  DateTime?
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt

  // Relations
  ownedWorkspaces Workspace[]       @relation("Owner")
  memberships     WorkspaceMember[]
  createdPages    Page[]
  uploadedFiles   File[]
  createdDrawings Drawing[]         @relation("DrawingAuthor")
  chatMessages    ChatMessage[]     @relation("ChatAuthor")
  kanbanCards     KanbanCard[]      @relation("Author")
  assignedCards   KanbanCard[]      @relation("CardAssignees")
}

model Workspace {
  id        String   @id @default(uuid())
  name      String
  ownerId   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner        User              @relation("Owner", fields: [ownerId], references: [id])
  members      WorkspaceMember[]
  pages        Page[]
  files        File[]
  folders      Folder[]
  drawings     Drawing[]
  chatRooms    ChatRoom[]
  kanbanBoards KanbanBoard[]
}

model WorkspaceMember {
  id          String   @id @default(uuid())
  workspaceId String
  userId      String
  role        String   @default("MEMBER") // OWNER, ADMIN, MEMBER
  joinedAt    DateTime @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, userId])
}

model Page {
  id          String   @id @default(uuid())
  title       String
  content     String   @default("")
  workspaceId String
  authorId    String
  parentId    String? // For nesting
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  author    User      @relation(fields: [authorId], references: [id], onDelete: Cascade)
  parent    Page?     @relation("PageHierarchy", fields: [parentId], references: [id], onDelete: Cascade)
  children  Page[]    @relation("PageHierarchy")
}

model Folder {
  id          String   @id @default(uuid())
  name        String
  workspaceId String
  parentId    String? // For nesting folders
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  parent    Folder?   @relation("FolderHierarchy", fields: [parentId], references: [id], onDelete: Cascade)
  children  Folder[]  @relation("FolderHierarchy")
  files     File[]
}

model File {
  id          String   @id @default(uuid())
  name        String
  url         String
  size        Int
  type        String
  description String? // Added for GitHub-like feel
  workspaceId String
  uploaderId  String
  folderId    String? // Linked to Folder
  createdAt   DateTime @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  uploader  User      @relation(fields: [uploaderId], references: [id], onDelete: Cascade)
  folder    Folder?   @relation(fields: [folderId], references: [id], onDelete: Cascade)
}

model Drawing {
  id          String   @id @default(uuid())
  title       String   @default("Untitled Drawing")
  data        String // JSON string of drawing paths/actions
  workspaceId String
  authorId    String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  author    User      @relation("DrawingAuthor", fields: [authorId], references: [id], onDelete: Cascade)
}

model ChatRoom {
  id          String   @id @default(uuid())
  name        String
  workspaceId String
  createdAt   DateTime @default(now())

  workspace Workspace     @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  messages  ChatMessage[]
}

model ChatMessage {
  id         String   @id @default(uuid())
  content    String
  chatRoomId String
  authorId   String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  chatRoom ChatRoom @relation(fields: [chatRoomId], references: [id], onDelete: Cascade)
  author   User     @relation("ChatAuthor", fields: [authorId], references: [id], onDelete: Cascade)
}

model KanbanBoard {
  id          String   @id @default(uuid())
  title       String
  workspaceId String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  workspace Workspace      @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  columns   KanbanColumn[]
}

model KanbanColumn {
  id        String   @id @default(uuid())
  title     String
  color     String?  @default("#3b82f6")
  boardId   String
  order     Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  board KanbanBoard  @relation(fields: [boardId], references: [id], onDelete: Cascade)
  cards KanbanCard[]
}

model KanbanCard {
  id          String   @id @default(uuid())
  content     String
  description String?
  columnId    String
  authorId    String
  order       Int      @default(0)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  column    KanbanColumn @relation(fields: [columnId], references: [id], onDelete: Cascade)
  author    User         @relation("Author", fields: [authorId], references: [id], onDelete: Cascade)
  assignees User[]       @relation("CardAssignees")
}

model Report {
  id          String   @id @default(uuid())
  title       String
  description String
  status      String   @default("OPEN") // OPEN, RESOLVED
  reporterId  String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}
